fixed spacing issue with image in footer

--- a/react/src/App.css
+++ b/react/src/App.css
@@ -233,3 +233,7 @@ h1, h2, h3, h4, h5, h6{
   margin-top: 3rem;
   margin-bottom: 3rem;
 }
+
+.footer-img {
+  margin-bottom: 1rem;
+}
